--- a/style.css
+++ b/style.css
@@ -1,33 +1,90 @@
 *{
-    margin: 0;
-    padding: 0;
+    padding: 0%;
+    margin: 0%;
+    box-sizing: border-box;
 }
-nav{
+.container{
+    width: 100%;
+    height: 100%;
+    background-color: #2b58ac;
+    position: fixed;
     display: flex;
 }
-.menu > span{
-    background-color: coral;
-    width: 100px;
-    height: 30px;
-    text-align: center;
-    line-height: 30px;
-    display: inline-block;
+.box{
+    width: 55%;
+    height: 70%;
+    margin-left: 25%;
+    margin-top: 5%;
+    border-radius: 4%;
+    display: flex;
 }
-span:hover{
-    background-color: lightskyblue;
+.box-picture{
+    width: 50%;
+    height: 100%;
+    background-color: wheat;
+    border-radius: 4% 0 0 4%;
+}
+img{
+    width: 100%;
+    height: 100%;
+    border-radius: 4% 0 0 4%;
+}
+.box-login{
+    width: 50%;
+    height: 100%;
+    background-color: white;
+    border-radius: 0 4% 4% 0;
+}
+.login{
+    width: 90%;
+    height: 85%;
+    margin-top: 5%;
+    margin-left: 5%;
+}
+.title{
+    text-align: center;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: #2b58ac;
+    margin: 40px;
+    font-size: 25px;
+}
+.main-login{
+    width: 100%;
+    height: 75%;
+}
+.btnA{
+    width: 95%;
+    height: 40px;
+    background-color: rgb(244, 246, 248);
+    border-radius: 2px;
+    font-size: 15px;
+    margin-top: 5%;
+}
+.checkbox, .button, .foget-password{
+    margin-top: 5%;
+}
+span{
+    color: #9c9c9c;
+}
+.btnB{
+    width:95%;
+    height: 40px;
+    background-color: #2b58ac;
     color: white;
 }
-.menu-block{
-    display: none;
+.btnB:hover{
+    background-color: #2f5caf;
 }
-.menu-block > span{
-    display: block;
-    background-color: yellow;
-    color: black;
+.foget-password a{
+    text-align: right;
+    text-decoration: none;
 }
-.menu-block span:hover{
-    background-color: red;
+.foget-password a p{
+    color: #9c9c9c;
 }
-.menu span:hover .menu-block{
-    display: block;
+.footer{
+    text-align: center;
+}
+.footer a{
+    color: #9c9c9c;
 }
